[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = { version = "0.31.1", features = ["async"] }
escrow-app = { version = "0.1.0", path = "../programs/escrow-app" }
solana-client = "2.3.7"
solana-system-interface = "1.0.0"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
tokio = "1.47.1"
