[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(custom_heap)',
    'cfg(custom_panic)',
    'cfg(anchor_debug)',
    'cfg(solana)',
] }

[package]
name = "escrow-app"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_app"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ['init-if-needed'] }
anchor-spl = "0.31.1"
